[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/Fallen_Gargoyle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/ThrowableSpear.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/FallenGargoyle.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.66081, 5.13177 )

[node name="FallenGargoyles" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
SPEAR = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.574524, 2.43068 )
shape = SubResource( 1 )

[node name="SpearPos" type="Position2D" parent="."]
position = Vector2( -3.9375, 3.9375 )

[node name="ReloadSpear" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="timeout" from="ReloadSpear" to="." method="_on_ReloadSpear_timeout"]
